compiler/tools/fpp-check/test/port_instance/undef_event.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/port_instance/undef_event.fpp:3.3
  event port eventOut
  ^
error: cannot find symbol `Fw`
note: looking for a port here
